# aulalaerte

./: .gitignore  AC2.py  Dockerfile  README.md  api.py  database.py  docker-compose.yml  frontend.py  imoveis.db  laerte.py  main.py  main2.py  pyproject.toml  render.yaml  requirements.txt  scraper.py
