[project]
name = "projeto-laerte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "streamlit>=1.45.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.49",
    "undetected-chromedriver>=3.5.5",
    "setuptools>=82.0.1",
]
